reptrack-kube-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reptrack-worker
  namespace: reptrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reptrack-worker
  template:
    metadata:
      labels:
        app: reptrack-worker
    spec:
      containers:
        - name: reptrack
          image: moindev/reptrack:latest
          imagePullPolicy: Always
          command: ["bundle", "exec", "sidekiq"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: reptrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: reptrack
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
